--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <script type="text/javascript"
-    src="http://webapi.amap.com/maps?v=1.4.7&key=3eeab9c0aa812c5e611dd22778bafea3"></script>
+    src="https://webapi.amap.com/maps?v=1.4.7&key=3eeab9c0aa812c5e611dd22778bafea3"></script>
   <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
 </body>
 
